@@ -1,3 +1,10 @@
+Fri Aug 08 17:36:16 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* include/tdsconvert.h: cleanup and doc
+	* src/odbc/convert_tds2sql.c src/odbc/odbc.c src/odbc/sql2tds.c:
+	- fixed support for DATE/TIME input parameter (reported by 
+	  Tom Rogers)
+	* src/odbc/Makefile.am: use -Bsymbolic option linking
+
 Fri Aug 08 12:18:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/unittests/Makefile.am:
 	* src/odbc/unittests/raiseerror.c(added):
